[gd_scene load_steps=6 format=3 uid="uid://bq0ddt4km0h1v"]

[ext_resource type="Script" path="res://options.gd" id="1_fnjba"]
[ext_resource type="FontFile" uid="uid://ciynf0kgqo7w" path="res://fonts/PixeloidSans-mLxMm.ttf" id="1_upddr"]
[ext_resource type="Texture2D" uid="uid://h4ajs24bjlrm" path="res://images/black background.png" id="2_r01fe"]
[ext_resource type="Texture2D" uid="uid://bvbapjgihnk7m" path="res://images/bar.png" id="3_2b78x"]
[ext_resource type="AudioStream" uid="uid://b13cnhx4sqnjn" path="res://sounds/menu select.mp3" id="5_inb3r"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnjba")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.94929, 4.74208)
texture = ExtResource("2_r01fe")
expand_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Settings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -20.0
offset_right = 47.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicEnabled" type="Button" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_upddr")
theme_override_font_sizes/font_size = 40
text = "Music: Enabled"
flat = true

[node name="MusicEnabledBar" type="TextureProgressBar" parent="Settings/MusicEnabled"]
layout_mode = 0
offset_left = 53.5
offset_top = 51.5
offset_right = 253.5
offset_bottom = 251.5
scale = Vector2(1.56, 0.05)
texture_progress = ExtResource("3_2b78x")

[node name="SFXEnabled" type="Button" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_upddr")
theme_override_font_sizes/font_size = 40
text = "SFX: Enabled"
flat = true

[node name="SFXEnabledBar" type="TextureProgressBar" parent="Settings/SFXEnabled"]
layout_mode = 0
offset_left = 7.5
offset_top = 51.5
offset_right = 47.5
offset_bottom = 91.5
scale = Vector2(2.028, 0.05)
texture_progress = ExtResource("3_2b78x")

[node name="FullscreenEnabled" type="Button" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_upddr")
theme_override_font_sizes/font_size = 40
text = "Fullscreen Enabled"
flat = true

[node name="FullscreenEnabledBar" type="TextureProgressBar" parent="Settings/FullscreenEnabled"]
layout_mode = 0
offset_left = 7.5
offset_top = 51.5
offset_right = 47.5
offset_bottom = 91.5
scale = Vector2(2.028, 0.05)
texture_progress = ExtResource("3_2b78x")

[node name="Return" type="Button" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_upddr")
theme_override_font_sizes/font_size = 40
text = "Return to Main Menu"
flat = true

[node name="ReturnBar" type="TextureProgressBar" parent="Settings/Return"]
layout_mode = 0
offset_left = 7.5
offset_top = 51.5
offset_right = 47.5
offset_bottom = 91.5
scale = Vector2(2.22, 0.05)
texture_progress = ExtResource("3_2b78x")

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_inb3r")
volume_db = -20.0
bus = &"SFX"
